chore: add meta_data config, and adjust response body
